--- a/package.json
+++ b/package.json
@@ -23,4 +23,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@primevue/nuxt-module": "^4.2.5",
+    "typescript": "^5.7.3",
+    "vue-tsc": "^2.2.0"
+  }
 }
