--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/supabase": "^1.4.6",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@primevue/nuxt-module": "^4.2.5",
+    "@supabase/supabase-js": "^2.48.0",
     "typescript": "^5.7.3",
     "vue-tsc": "^2.2.0"
   }
